cargo-features = ["strip"]

[package]
name = "deeprockgalactic-saveeditor"
version = "0.1.0"
edition = "2018"
authors = ["Caitlyn <localcmail@gmail.com>"]

[lib]
name = "deeprockgalactic_saveeditor"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.4.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
hex = "0.4.3"

[profile.release]
opt-level = 3
panic = "abort"
lto = "on"